Switched point on sphere gen. to rand_distr::UnitSphere.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ nalgebra = "0.20.0"
 nsi = "0.1.13"
 ply-rs = "0.1.2"
 rstar = "0.7.1"
+rand_distr = "0.2.2"
 rand_xoshiro = "0.4.0"
 rand = "0.7.3"
 serde = "1.0.105"
