--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ error-chain = "0.12.2"
 if_chain = "1.0.0"
 indicatif = "0.14.0"
 nalgebra = "0.20.0"
-nsi = "0.1.13"
+nsi = "0.1.14"
 ply-rs = "0.1.2"
 rstar = "0.7.1"
 rand_distr = "0.2.2"
@@ -20,6 +20,7 @@ serde = "1.0.105"
 serde_derive = "1.0.105"
 toml = "0.5.6"
 tobj = "1.0.0"
+rayon = "1.3.0"
 
 [profile.release]
 lto = "on"
