--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "rdla"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Moritz Moeller <virtualritz@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-clap = "2.33.0"
+clap = { version = "2.33.0", features = ["yaml"] }
 error-chain = "0.12.2"
 if_chain = "1.0.0"
 indicatif = "0.14.0"
@@ -20,7 +20,6 @@ serde = "1.0.105"
 serde_derive = "1.0.105"
 toml = "0.5.6"
 tobj = "1.0.0"
-rayon = "1.3.0"
 
 [profile.release]
 lto = "on"
