--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rdla"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["Moritz Moeller <virtualritz@gmail.com>"]
 edition = "2018"
 
@@ -9,7 +9,7 @@ clap = { version = "2.33.0", features = ["yaml"] }
 error-chain = "0.12.2"
 if_chain = "1.0.0"
 indicatif = "0.14.0"
-nalgebra = "0.20.0"
+nalgebra = "0.21.0"
 nsi = "0.1.16"
 ply-rs = "0.1.2"
 rstar = "0.7.1"
@@ -21,6 +21,10 @@ serde_derive = "1.0.106"
 toml = "0.5.6"
 tobj = "1.0.0"
 
+[target.'cfg(target_os = "macos")'.dependencies]
+jemallocator = "0.3.2"
+
 [profile.release]
 lto = "on"
 opt-level = 3
+panic = "unwind"
