--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,8 @@ serde_derive = "1.0.106"
 toml = "0.5.6"
 tobj = "1.0.0"
 
-[target.'cfg(target_os = "macos")'.dependencies]
-jemallocator = "0.3.2"
-
+#[target.'cfg(target_os = "macos")'.dependencies]
+#jemallocator = "0.3.2"
 [profile.release]
 lto = "on"
 opt-level = 3
