--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "rdla"
-version = "0.2.4"
+version = "0.2.5"
 authors = ["Moritz Moeller <virtualritz@gmail.com>"]
+license = "MIT"
 edition = "2018"
 
 [dependencies]
@@ -10,7 +11,7 @@ error-chain = "0.12.2"
 if_chain = "1.0.0"
 indicatif = "0.14.0"
 nalgebra = "0.21.0"
-nsi = "0.2.0"
+nsi = "0.3.0"
 ply-rs = "0.1.2"
 rstar = "0.7.1"
 rand_distr = "0.2.2"
@@ -20,6 +21,7 @@ serde = "1.0.110"
 serde_derive = "1.0.110"
 toml = "0.5.6"
 tobj = "2.0.0"
+rpmalloc = "0.2.0"
 
 #[target.'cfg(target_os = "macos")'.dependencies]
 #jemallocator = "0.3.2"
