--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "rdla"
-version = "0.2.6"
+version = "0.2.7"
 authors = ["Moritz Moeller <virtualritz@gmail.com>"]
 license = "MIT"
 edition = "2018"
 
 [dependencies]
-clap = { version = "2.33.1", features = ["yaml"] }
+clap = { version = "2.33.1", features = ["yaml", "color"] }
 error-chain = "0.12.2"
 if_chain = "1.0.0"
 indicatif = "0.14.0"
 nalgebra = "0.21.0"
-nsi = "0.4.0"
+nsi = "0.4.3"
 ply-rs = "0.1.2"
 rstar = "0.8.0"
 rand_distr = "0.2.2"
@@ -20,7 +20,7 @@ rand = "0.7.3"
 serde = "1.0.110"
 serde_derive = "1.0.110"
 toml = "0.5.6"
-tobj = "2.0.0"
+tobj = "2.0.1"
 rpmalloc = "0.2.0"
 
 [profile.release]
