--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,24 +6,25 @@ license = "MIT"
 edition = "2018"
 
 [dependencies]
-clap = { version = "2.33.1", features = ["yaml", "color"] }
-error-chain = "0.12.2"
-if_chain = "1.0.0"
-indicatif = "0.14.0"
-nalgebra = "0.21.0"
-nsi = "0.4.5"
-ply-rs = "0.1.2"
-rstar = "0.8.0"
-rand_distr = "0.2.2"
-rand_xoshiro = "0.4.0"
-rand = "0.7.3"
-serde = "1.0.111"
-serde_derive = "1.0.111"
-toml = "0.5.6"
-tobj = "2.0.2"
+clap = { version = "2.33.3", features = ["yaml", "color"] }
+error-chain = "0.12.4"
+if_chain = "1.0.1"
+indicatif = "0.15.0"
+nalgebra = "0.23.2"
+nsi = "0.5.6"
+ply-rs = "0.1.3"
+rstar = "0.8.2"
+rand_distr = "0.4.0"
+rand_xoshiro = "0.6.0"
+rand = "0.8.0"
+serde = "1.0.118"
+serde_derive = "1.0.118"
+toml = "0.5.8"
+tobj = "2.0.3"
 rpmalloc = "0.2.0"
 
 [profile.release]
 lto = "on"
 opt-level = 3
+codegen-units = 1
 panic = "unwind"
