--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,21 +6,22 @@ license = "MIT"
 edition = "2018"
 
 [dependencies]
+bytemuck = "1.5.1"
 clap = { version = "2.33.3", features = ["yaml", "color"] }
 error-chain = "0.12.4"
 if_chain = "1.0.1"
 indicatif = "0.15.0"
-nalgebra = "0.23.2"
-nsi = "0.5.6"
+nalgebra = "0.25.3"
+nsi = "0.6.0"
 ply-rs = "0.1.3"
 rstar = "0.8.2"
 rand_distr = "0.4.0"
 rand_xoshiro = "0.6.0"
-rand = "0.8.0"
-serde = "1.0.118"
-serde_derive = "1.0.118"
+rand = "0.8.3"
+serde = "1.0.124"
+serde_derive = "1.0.124"
 toml = "0.5.8"
-tobj = "2.0.3"
+tobj = "2.0.4"
 rpmalloc = "0.2.0"
 
 [profile.release]
